# cmd/cable/docs/swagger.json
@@ -251,7 +251,7 @@
                     {
                         "type": "string",
                         "description": "Broker ID",
-                        "name": "brokerID",
+                        "name": "nodeId",
                         "in": "query",
                         "required": true
                     }
@@ -267,7 +267,7 @@
                         }
                     },
                     "400": {
-                        "description": "Invalid brokerID",
+                        "description": "Invalid nodeId",
                         "schema": {
                             "type": "string"
                         }
